Remove .btn-sm class from action buttons

--- a/app/views/recurring_driver_compliances/show.html.erb
+++ b/app/views/recurring_driver_compliances/show.html.erb
@@ -6,8 +6,8 @@
   </div>
   <div class="col-sm-12 col-md-6">
     <div class="pull-right">
-      <%= link_to translate_helper("delete_recurring_driver_compliance_button"), delete_recurring_driver_compliance_path(@recurring_driver_compliance), class: "btn action-button btn-sm" %>
-      <%= link_to translate_helper("edit_recurring_driver_compliance_button"), edit_recurring_driver_compliance_path(@recurring_driver_compliance), class: "btn action-button btn-sm" %>
+      <%= link_to translate_helper("delete_recurring_driver_compliance_button"), delete_recurring_driver_compliance_path(@recurring_driver_compliance), class: "btn action-button" %>
+      <%= link_to translate_helper("edit_recurring_driver_compliance_button"), edit_recurring_driver_compliance_path(@recurring_driver_compliance), class: "btn action-button" %>
     </div>
   </div>
 </div>
