--- a/app/views/drivers/edit.html.erb
+++ b/app/views/drivers/edit.html.erb
@@ -7,10 +7,10 @@
   <div class="col-sm-12 col-md-6">
     <% if can? :manage, @driver %>
       <div class="pull-right">
-        <button class="btn action-button btn-sm" id="driver_form_submit">
+        <button class="btn action-button" id="driver_form_submit">
           <%= translate_helper("save") %>
         </button>
-        <%= link_to translate_helper("cancel"), @driver, class: "btn action-button btn-sm" %>
+        <%= link_to translate_helper("cancel"), @driver, class: "btn action-button" %>
       </div>
     <% end %>
   </div>
