--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -7,8 +7,8 @@
   <div class="col-sm-12 col-md-6">
     <% if can? :manage, @driver %>
       <div class="pull-right">
-        <%= link_to translate_helper("delete_driver_button"), @driver, method: :delete, data: { confirm: translate_helper("delete_driver_confirm") }, class: "btn action-button btn-sm" %>
-        <%= link_to translate_helper("edit_driver_button"), edit_driver_path(@driver), class: "btn action-button btn-sm" %>
+        <%= link_to translate_helper("delete_driver_button"), @driver, method: :delete, data: { confirm: translate_helper("delete_driver_confirm") }, class: "btn action-button" %>
+        <%= link_to translate_helper("edit_driver_button"), edit_driver_path(@driver), class: "btn action-button" %>
       </div>
     <% end %>
   </div>
