--- a/app/views/recurring_driver_compliances/delete.html.erb
+++ b/app/views/recurring_driver_compliances/delete.html.erb
@@ -6,10 +6,10 @@
   </div>
   <div class="col-sm-12 col-md-6">
     <div class="pull-right">
-      <button class="btn action-button btn-sm" id="recurring_driver_compliance_form_submit">
+      <button class="btn action-button" id="recurring_driver_compliance_form_submit">
         <%= translate_helper("delete_recurring_driver_compliance_confirm_button") %>
       </button>
-      <%= link_to translate_helper("cancel"), @recurring_driver_compliance, class: "btn action-button btn-sm" %>
+      <%= link_to translate_helper("cancel"), @recurring_driver_compliance, class: "btn action-button" %>
     </div>
   </div>
 </div>
