Fixing modal dialog titles, date inputs, and buttons

--- a/app/views/driver_compliances/_form.html.erb
+++ b/app/views/driver_compliances/_form.html.erb
@@ -60,5 +60,5 @@
     </div><!-- END .col-md-6 -->
   </div><!-- END .row -->
   
-  <p><%= f.submit translate_helper("driver_compliance_form_submit"), class: "btn action-button" %></p>
+  <div class="row form-actions"><%= f.submit translate_helper("driver_compliance_form_submit"), class: "btn action-button" %></div>
 <% end %>
