--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -51,5 +51,5 @@
     </div><!-- END .col-md-6 -->
   </div><!-- END .row -->
   
-  <p><%= f.submit translate_helper("document_form_submit"), class: "btn action-button" %></p>
+  <div class="row form-actions"><%= f.submit translate_helper("document_form_submit"), class: "btn action-button" %></div>
 <% end %>
