--- a/app/views/documents/create.js.erb
+++ b/app/views/documents/create.js.erb
@@ -1,3 +1,3 @@
-$('#modal-dialog').modal('hide');
+$('#driver-form-modal-dialog').modal('hide');
 $("<%= j (render @document) %>").hide().appendTo('#documents-table tbody').slideDown('slow');
 
