--- a/app/views/driver_histories/_form.html.erb
+++ b/app/views/driver_histories/_form.html.erb
@@ -47,5 +47,5 @@
     </div><!-- END .col-md-6 -->
   </div><!-- END .row -->
   
-  <p><%= f.submit translate_helper("driver_history_form_submit"), class: "btn action-button" %></p>
+  <div class="row form-actions"><%= f.submit translate_helper("driver_history_form_submit"), class: "btn action-button" %></div>
 <% end %>
