--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -230,14 +230,18 @@
   <% end %>
 <% end %> 
 
-<div id="modal-dialog" class="modal fade col-sm-12" role="dialog" aria-hidden="true" tabindex="-1">
+<div id="driver-form-modal-dialog" class="modal fade" role="dialog" aria-hidden="true" tabindex="-1" aria-labelledby="modal-title">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <div class="modal-title"><strong></strong></div>
+        <h2 class="modal-title"></h2>
       </div>
-      <div class="modal-body"></div><!-- END .modal-body -->
+      <div class="modal-body"><div class="container-fluid"></div></div><!-- END .modal-body -->
+      <div class="modal-footer">
+        <button type="button" class="btn action-button" id="driver-form-modal-dialog-submit"><%= translate_helper("save") %></button>
+        <button type="button" class="btn action-button" data-dismiss="modal"><%= translate_helper("cancel") %></button>
+      </div><!-- END .modal-footer -->
     </div><!-- END .modal-content -->
   </div><!-- END .modal-dialog -->
 </div><!-- END .modal -->
@@ -257,5 +261,17 @@
         update_hours_enabled(i);
       });
     })(i);
+    
+    // modal form setup
+    $('#driver-form-modal-dialog').on('show.bs.modal', function (e) {
+      var $this = $(this);
+      var $modalBody = $this.find(".modal-body");
+      $modalBody.find(".panel").removeClass("panel-primary");
+      $modalBody.find(".form-actions").hide();
+    })
+    
+    $("#driver-form-modal-dialog-submit").on("click", function(){
+      $('#driver-form-modal-dialog .modal-body form').submit();
+    });
   });
 <% end %>
