--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -42,3 +42,5 @@
     </div>
   <% end %>
 <% end %>
+
+<%= render 'shared/hide_invisible_form_fields_js', model_name: "trip", table_name: 'trips', provider_id:  current_provider.try(:id) %>
