--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -51,7 +51,7 @@
       </div><!-- END .panel -->
       
       <div class="panel panel-primary">
-        <div class="panel-heading"><%= label_tag translate_helper("operating_hours_heading") %></div>
+        <div class="panel-heading"><%= translate_helper("operating_hours_heading") %></div>
         <div class="panel-body form-inline">
           <table class="table table-condensed">
             <tbody>
@@ -137,7 +137,7 @@
     <div class="col-sm-12 col-md-6">
       <% if @driver.persisted? %>
         <div class="panel panel-primary">
-          <div class="panel-heading"><%= label_tag translate_helper("driver_documents_heading") %></div>
+          <div class="panel-heading"><%= translate_helper("driver_documents_heading") %></div>
           <table class="table table-striped table-condensed" id="documents-table">
             <thead>
               <tr>
@@ -165,7 +165,7 @@
         </div><!-- END .panel -->
 
         <div class="panel panel-primary">
-          <div class="panel-heading"><%= label_tag translate_helper("driver_histories_heading") %></div>
+          <div class="panel-heading"><%= translate_helper("driver_histories_heading") %></div>
           <table class="table table-striped table-condensed" id="driver_histories-table">
             <thead>
               <tr>
@@ -193,9 +193,8 @@
         </div><!-- END .panel -->      
 
         <div class="panel panel-primary">
-          <div class="panel-heading"><%= label_tag translate_helper("driver_compliances_heading") %></div>
+          <div class="panel-heading"><%= translate_helper("driver_compliances_heading") %></div>
           <table class="table table-striped table-condensed" id="driver_compliances-table">
-
             <thead>
               <tr>
                 <th class="col-sm-3"><%= translate_helper("driver_compliance_form_due_date") %></th>
@@ -266,7 +265,7 @@
     $('#driver-form-modal-dialog').on('show.bs.modal', function (e) {
       var $this = $(this);
       var $modalBody = $this.find(".modal-body");
-      $modalBody.find(".panel").removeClass("panel-primary");
+      $modalBody.find(".panel:first").removeClass("panel-primary");
       $modalBody.find(".form-actions").hide();
     })
     
