--- a/app/views/lookup_tables/_edit_value_button.html.haml
+++ b/app/views/lookup_tables/_edit_value_button.html.haml
@@ -21,7 +21,7 @@
       var form = $(this).find('form');
       var baseUrl = "#{update_value_lookup_table_path(table)}";
       var currentValue = $('#lookupTable').DataTable().row($('#lookupTable .selected')).data();
-      var newUrl = baseUrl + "?old_value=" + currentValue;
+      var newUrl = baseUrl + "?model_id=" + $('#lookupTable .selected').data('model-id');
       form.prop('action', newUrl);
       form.find('input[name=value]').val(currentValue);
     });
