Adding UI for associating documents to history and compliance events [#98939218]

--- a/app/views/document_associations/_document_association_for_document.html.erb
+++ b/app/views/document_associations/_document_association_for_document.html.erb
@@ -15,13 +15,13 @@
     <% document_associations.each do |document_association| %>
       <tr>
         <td>
-          <%= document_association.class.name.humanize.capitalize %>
+          <%= document_association.associable.associable_date.to_s(:long) %>
         </td>
         <td>
-          <%= document_association.associable.date.to_s(:long) %>
+          <%= document_association.associable.associable_name %>
         </td>
         <td>
-          <%= document_association.associable.name %>
+          <%= document_association.associable.class.name.underscore.humanize.capitalize %>
         </td>
       </tr>
     <% end %>
