--- a/app/views/documents/_document.html.erb
+++ b/app/views/documents/_document.html.erb
@@ -6,12 +6,19 @@
   </td>
   <td>
     <p class="form-control-static">
-      <%= link_to document.description, @readonly ? document.document.url : polymorphic_path([document.documentable, document], action: :edit), remote: true %>
+      <%= link_to_unless @readonly, document.description, polymorphic_path([document.documentable, document], action: :edit), remote: true %>
     </p>
   </td>
-  <% unless @readonly %>
-    <td>
+  <td>
+    <p class="form-control-static">
+      <%= number_to_human_size document.document_file_size %>
+    </p>
+  </td>
+  <td>
+    <% if @readonly %>
+      <%= link_to translate_helper("document_download"), document.document.url, class: "btn action-button btn-sm pull-right" %>
+    <% else %>
       <%= link_to "X", polymorphic_path([document.documentable, document]), remote: true, method: :delete, data: { confirm: translate_helper("document_delete_confirm") }, class: "btn btn-danger btn-sm pull-right" %>
-    </td>
-  <% end %>
+    <% end %>
+  </td>
 </tr>
