--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -143,7 +143,8 @@
               <tr>
                 <th class="col-sm-3"><%= translate_helper("document_form_upload_date") %></th>
                 <th><%= translate_helper("document_form_description") %></th>
-                <% unless @readonly %><th class="col-sm-1"></th><% end %>
+                <th class="col-sm-2"><%= translate_helper("document_form_file_size") %></th>
+                <th class="col-sm-1"></th>
               </tr>
             </thead>
             <tbody>
