Updating vehicles controller and routing specs to make use of index action

--- a/app/views/drivers/_driver.html.erb
+++ b/app/views/drivers/_driver.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= link_to_if can?(:manage, driver), driver.name, driver %>
+    <%= link_to_if can?(:read, driver), driver.name, driver %>
   </td>
   <td>
     <%= driver.active? ? translate_helper("active") : translate_helper("inactive") %>
