--- a/app/views/reports/_footer.html.erb
+++ b/app/views/reports/_footer.html.erb
@@ -18,4 +18,4 @@
   <dd class="hand-completed"></dt>
 </dl>
 
-<%= link_to translate_helper("back_to_reports_link")  , reports_path, :class=>'action-bttn' %>
+<%= link_to translate_helper("back_to_reports_link")  , reporting_reports_path, :class=>'action-bttn' %>
