--- a/app/views/reporting/reports/_header.html.haml
+++ b/app/views/reporting/reports/_header.html.haml
@@ -8,5 +8,5 @@
 
   :javascript
     $('#runReporting').on('click', function() {
-      $('.filter-form').submit();
+      $('.filter-form form').submit();
     });
