--- a/app/views/reporting/results/index.html.haml
+++ b/app/views/reporting/results/index.html.haml
@@ -17,7 +17,7 @@
         $('#per_page_select').on('change', function(){
           var params = #{@params.to_json};
           params.per_page = $(this).val();
-          window.location.href = "#{reporting_report_results_path(@report)}?" + $.param(params);
+          window.location.href = "#{reporting.report_results_path(@report)}?" + $.param(params);
         });
       %span
         = "records per page"
