--- a/app/views/reporting/filters/_filter_group.html.haml
+++ b/app/views/reporting/filters/_filter_group.html.haml
@@ -1,6 +1,6 @@
 - if filter_group && search_form
   - filter_group_id = filter_group.id
-  - fields = filter_group.reporting_filter_fields.order(:sort_order, :id)
+  - fields = filter_group.filter_fields.order(:sort_order, :id)
 
   .panel.panel-default
     .panel-heading{role: 'tab', id: "filter-heading-#{filter_group_id}"}
@@ -13,7 +13,7 @@
 
         - fields.each do |field|
         
-          - if !field.reporting_lookup_table
+          - if !field.lookup_table
             
             - field_type = report.data_model.columns_hash[field.name].type rescue nil
             - field_class = 'form-control form-control-inline'
@@ -23,7 +23,7 @@
               - field_class += ' is-date-field'
               - is_date_field = true
 
-            - if field.reporting_filter_type.name == Reporting::FilterType::RANGE
+            - if field.filter_type.name == Reporting::FilterType::RANGE
               = render partial: 'reporting/filters/range_filter', locals: {search_form: search_form, field: field, is_date_field: is_date_field, field_class: field_class, field_type: field_type}
             
             - else
