--- a/app/views/reporting/filters/_regular_filter.html.haml
+++ b/app/views/reporting/filters/_regular_filter.html.haml
@@ -1,7 +1,7 @@
 .row.form-group
-  = search_form.label "#{field.title || field.name + '_' + field.reporting_filter_type.name}", class: 'col-sm-3'  rescue nil
+  = search_form.label "#{field.title || field.name + '_' + field.filter_type.name}", class: 'col-sm-3'  rescue nil
   .col-sm-9
-    - filter_type_name = field.reporting_filter_type.name || ''
+    - filter_type_name = field.filter_type.name || ''
     - field_id = "#{field.name}_#{filter_type_name}"
     - raw_value = params[:q][field_id] rescue ''
     - field_class += ' is-end-date' if is_date_field && (filter_type_name == 'lt' || filter_type_name == 'lteq')
