--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -33,20 +33,23 @@
         success: function(resp) {
           if(!resp.success) {
             show_alert(resp.message);
-            resetSchedule(tripId, prevRunId);
+            resetTripSchedule(tripId, prevRunId);
           } else {
             hide_alert();
-            // update data-run-id for run dropdown in trips table
+            // update data-run-id for run dropdown in trips table 
             $('.trip-run-options[data-run-id=' + prevRunId+ ']').attr('data-run-id',runId); 
+            $('.trip-run-options[data-run-id=' + runId+ ']').val(runId); 
 
             var calendar = $('#calendar').data('fullCalendar');
             calendar.removeEvents(resp.trip_event_json.id);
             calendar.renderEvent(resp.trip_event_json);
+
+            manageSchedulingButtons();
           }
         },
         failure: function() {
           show_alert("#{translate_helper(:unknown_error)}");
-          resetSchedule(tripId, prevRunId);
+          resetTripSchedule(tripId, prevRunId);
         }
       });
     }
@@ -68,7 +71,7 @@
     }
 
     function getSelectedTripPrevRunId() {
-      return parseInt($('#tripsTable input[name=trip_records]:checked').parents('tr').find('.trip-run-options').data('run-id') );
+      return parseInt($('#tripsTable input[name=trip_records]:checked').parents('tr').find('.trip-run-options').attr('data-run-id') );
     }
 
     $('#scheduleButton').click(function() {
@@ -80,7 +83,7 @@
     });
 
     $('#tripsTable').on('change', '.trip-run-options', function() {
-      assignTripToRun($(this).data('trip-id'), parseInt($(this).val()), getSelectedTripPrevRunId() );
+      assignTripToRun(parseInt($(this).attr('data-trip-id') ), parseInt($(this).val()), getSelectedTripPrevRunId() );
     });
 
     function manageSchedulingButtons() {
@@ -96,7 +99,7 @@
       }
 
       if(
-        typeof(selectedTripRunId) == 'number' && selectedTripRunId != unscheduledRunId) {
+        $.isNumeric(selectedTripRunId) && selectedTripRunId != unscheduledRunId) {
         $('#unscheduleButton').show();
       } else {
         $('#unscheduleButton').hide();
