[#98322306] apply for textarea fields in forms

--- a/app/views/shared/_hide_invisible_form_fields_js.html.haml
+++ b/app/views/shared/_hide_invisible_form_fields_js.html.haml
@@ -5,5 +5,5 @@
     var fieldNames = #{invisible_field_names || []}
     fieldNames.forEach(function(fieldName) {
       var inputName = prefix + "\\[" + fieldName + "\\]";
-      $("form input[name="  + inputName + "], form select[name="  + inputName + "]").parents('.form-group, li').hide();
+      $("form input[name="  + inputName + "], form textarea[name="  + inputName + "], form select[name="  + inputName + "]").parents('.form-group, li').hide();
     });
