--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -1075,7 +1075,6 @@ body.reports table.trip td.mobility {
 
 body.reports #instructions, 
 body.reports #address, 
-body.reports #logo,
 body.reports #report-footer,
 body.reports th.table-header.print-only {
   display: none;
@@ -1392,6 +1391,9 @@ body.trips div.repeats>li {
  * Dispatch
  *
  */
+body.dispatch {
+  font-size: 13px !important;
+}
 .dispatch #main {
   padding: 10px 1% 10px 1%;
   margin-bottom: 10px;
