Update vehicle page layouts and forms, nest vehicle maintenance events under vehicles, remove provider_id from VME model, updated specs [#100021918]

--- a/app/views/vehicle_maintenance_events/edit.html.erb
+++ b/app/views/vehicle_maintenance_events/edit.html.erb
@@ -2,4 +2,4 @@
   <h1><%= translate_helper("edit_maintenance_heading") %></h1>
 </div>
 
-<%= render :partial=>'form' %>
+<%= render partial: "form" %>
