--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -1,85 +1,17 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("vehicle_show_heading") %></h1>
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'vehicles' %>
+
+<div id="page-header" class="row">
+  <div class="col-sm-12 col-md-6">
+    <h1><%= translate_helper("vehicle_show_heading") %></h1>
+  </div>
+  <div class="col-sm-12 col-md-6">
+    <% if can? :manage, @vehicle %>
+      <div class="pull-right">
+        <%= link_to translate_helper("delete_vehicle_button"), @vehicle, method: :delete, data: { confirm: translate_helper("delete_vehicle_confirmation") }, class: "btn action-button" %>
+        <%= link_to translate_helper("edit_vehicle_button"), edit_vehicle_path(@vehicle), class: "btn action-button" %>
+      </div>
+    <% end %>
+  </div>
 </div>
 
-<p class="profile-actions selfclear">
-  <% if can? :edit, @vehicle %>
-  <%= link_to translate_helper("add_maintenance_link_text"), new_vehicle_maintenance_event_path(:vehicle_id=>@vehicle), :class=>'new-maintenance' %>
-  <% end %>
-  <span class="separator">|</span>
-  <% if can? :edit, @vehicle %>
-  <%= link_to translate_helper("edit_vehicle_link_text"), edit_vehicle_path(@vehicle), :class=>'edit edit-vehicle' %>
-  <% end %>
-</p>
-
-<div class="vehicle-profile selfclear">
-
-<dl>
-  <dt><%= translate_helper("vehicle_form_name_label") %></dt>
-  <dd><%= @vehicle.name %></dd>
-
-  <dt><%= translate_helper("vehicle_form_make_label") %></dt>
-  <dd><%= @vehicle.make %></dd>
-
-  <dt><%= translate_helper("vehicle_form_model_label") %></dt>
-  <dd><%= @vehicle.model %></dd>
-</dl>
-
-<dl>
-  <dt><%= translate_helper("vehicle_form_license_plate_label") %></dt>
-  <dd><%= @vehicle.license_plate %></dd>
-
-  <dt><%= translate_helper("vehicle_form_vin_label") %></dt>
-  <dd><%= @vehicle.vin %></dd>
-
-  <dt><%= translate_helper("vehicle_form_location_label") %></dt>
-  <dd><%= @vehicle.garaged_location %></dd>
-
-  <dt><%= translate_helper("vehicle_form_reportable_label") %></dt>
-  <dd><%= @vehicle.reportable ? 'Yes' : 'No' %></dd>
-</dl>
-
-</div>
-
-<% if @vehicle.vehicle_maintenance_events.size > 0 %>
-<table>
-
-  <tr>
-    <th><%= translate_helper("service_date") %></th>
-    <th><%= translate_helper("invoice_date") %></th>
-    <th><%= translate_helper("odometer") %></th>
-    <th><%= translate_helper("vendor_name") %></th>
-    <th><%= translate_helper("invoice_number") %></th>
-    <th><%= translate_helper("invoice_amount") %></th>
-    <th><%= translate_helper("reimbursable") %></th>
-    <th><%= translate_helper("services_performed") %></th>
-    <% if can? :edit, @vehicle %>
-    <th></th>
-    <% end %>
-  </tr>
-
-  <% for event in @vehicle.vehicle_maintenance_events %>
-  <tr>
-    <td><%= event.service_date %></td>
-    <td><%= event.invoice_date %></td>
-    <td><%= event.odometer %></td>
-    <td><%= event.vendor_name %></td>
-    <td><%= event.invoice_number %></td>
-    <td><%= event.invoice_amount %></td>
-    <td><%= event.reimbursable %></td>
-    <td><%= event.services_performed %></td>
-    <% if can? :edit, @vehicle %>
-    <td><%= link_to translate_helper("edit"), edit_vehicle_maintenance_event_path(event), :class=>'edit-maintenance' %></td>
-    <% end %>
-  </tr>
-  <% end %>
-
-</table>  
-
-<% else %> 
-<% end %>
-
-<% if current_user && can?(:edit, Provider) %>
-<hr />
-<%= link_to translate_helper("back_to_provider"), provider_path(current_user.current_provider), :class=>'action-bttn' %>
-<% end %>
+<%= render partial: "form" %>
