--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,78 +1,136 @@
 <%= form_for @vehicle do |f| %>
   <% if @vehicle.errors.any? %>
-    <div id="error_explanation">
-      <h2>translate_helper("vehicle_form_error_message", count: @vehicle.errors.count)</h2>
-
-      <ul>
-      <% @vehicle.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+    <div class="panel panel-danger">
+      <div class="panel-heading"><%= translate_helper("vehicle_form_error_message", count: @vehicle.errors.count) %></div>
+      <div class="panel-body">
+        <ul>
+          <% @vehicle.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <fieldset>
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">Details</div>
+        <div class="panel-body form-horizontal">
+          <div class="form-group">
+            <%= f.label :name, translate_helper("vehicle_form_name_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :name, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :year, translate_helper("vehicle_form_year_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :year, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :make, translate_helper("vehicle_form_make_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :make, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :model, translate_helper("vehicle_form_model_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :model, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :license_plate, translate_helper("vehicle_form_license_plate_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :license_plate, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :vin, translate_helper("vehicle_form_vin_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :vin, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :garaged_location, translate_helper("vehicle_form_location_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :garaged_location, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :active, translate_helper("vehicle_form_active_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.select :active, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle.active.to_s }, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :default_driver_id, translate_helper("vehicle_form_driver_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.collection_select :default_driver_id, Driver.active.for_provider(current_user.current_provider_id), :id, :name, {include_blank: true}, { class: "form-control", disabled: @readonly } %>
+            </div>
+          </div>  
+          <div class="form-group">
+            <%= f.label :reportable, translate_helper("vehicle_form_reportable_label"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.select :reportable, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle.reportable.to_s }, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+        </div><!-- END .panel-body -->
+      </div><!-- END .panel -->
+    </div><!-- END .col-md-6 -->
 
-    <ol class="section first">
-      <li>
-        <%= f.label :name, translate_helper("vehicle_form_name_label") %>
-        <%= f.text_field :name %>
-      </li>
+    <div class="col-sm-12 col-md-6">
+      <% if @vehicle.persisted? %>
+        <div class="panel panel-primary">
+          <div class="panel-heading"><%= translate_helper("vehicle_maintenance_events_heading") %></div>
+          <table class="table table-striped table-condensed" id="vehicle-maintenance-events-table">
+            <thead>
+              <tr>
+                <th class="col-sm-1"><%= translate_helper("service_date") %></th>
+                <th class="col-sm-1"><%= translate_helper("invoice_date") %></th>
+                <th class="col-sm-1"><%= translate_helper("odometer") %></th>
+                <th class="col-sm-1"><%= translate_helper("vendor_name") %></th>
+                <th class="col-sm-1"><%= translate_helper("invoice_number") %></th>
+                <th class="col-sm-1"><%= translate_helper("invoice_amount") %></th>
+                <th class="col-sm-1"><%= translate_helper("reimbursable") %></th>
+                <th><%= translate_helper("services_performed") %></th>
+                <% unless @readonly %><th class="col-sm-1"></th><% end %>
+              </tr>
+            </thead>
+            <tbody>
+              <% if @readonly and @vehicle.vehicle_maintenance_events.empty? %>
+                <tr>
+                  <td colspan="8"><%= translate_helper("vehicle_maintenance_events_empty") %></td>
+                </tr>
+              <% end %>
+              <%= render partial: 'vehicle_maintenance_events/vehicle_maintenance_event', collection: @vehicle.vehicle_maintenance_events %>
+            </tbody>
+          </table>
+          <% unless @readonly %>
+            <div class="panel-footer">
+              <div class="clearfix">
+                <%= link_to translate_helper("vehicle_maintenance_event_add_link_title"), new_vehicle_vehicle_maintenance_event_path(@vehicle), class: "btn action-button pull-right", remote: true %>
+              </div>
+            </div>
+          <% end %>
+        </div><!-- END .panel -->
+      <% end %>
+    </div><!-- END .col-md-6 -->
+  </div><!-- END .row -->
 
-      <li>
-        <%= f.label :year, translate_helper("vehicle_form_year_label") %>
-        <%= f.text_field :year %>
-      </li>
-
-      <li>
-        <%= f.label :make, translate_helper("vehicle_form_make_label") %>
-        <%= f.text_field :make %>
-      </li>
-
-      <li>
-        <%= f.label :model, translate_helper("vehicle_form_model_label") %>
-        <%= f.text_field :model %>
-      </li>
-    </ol>
-
-    <ol class="section second">
-      <li>
-        <%= f.label :license_plate, translate_helper("vehicle_form_license_plate_label") %>
-        <%= f.text_field :license_plate %>
-      </li>
-
-      <li>
-        <%= f.label :vin, translate_helper("vehicle_form_vin_label") %>
-        <%= f.text_field :vin %>
-      </li>
-
-      <li>
-        <%= f.label :garaged_location, translate_helper("vehicle_form_location_label") %>
-        <%= f.text_field :garaged_location %>
-      </li>
-
-      <li>
-        <%= f.label :active, translate_helper("vehicle_form_active_label") %>
-        <%= f.select :active, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle.active.to_s } %>
-      </li>
-    </ol>
-    
-    <ol class="section third">
-      <li>
-        <%= f.label :default_driver_id, translate_helper("vehicle_form_driver_label") %>
-        <%= f.collection_select :default_driver_id, Driver.active.for_provider(current_user.current_provider_id), :id, :name, :include_blank => true %>
-      </li>
-
-      <li>
-        <%= f.label :reportable, translate_helper("vehicle_form_reportable_label") %>
-        <%= f.select :reportable, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle.reportable.to_s } %>
-      </li>
-    </ol>
-
-    <div class="actions">
-      <%= f.submit translate_helper("vehicle_form_submit") %>
-    </div>
-
-  </fieldset>
-
+  <% unless @readonly %>
+    <div class="row form-actions"><%= f.submit translate_helper("vehicle_form_submit"), class: "btn action-button" %></div>
+  <% end %>
 <% end %> 
+
+<%= render 'shared/hide_invisible_form_fields_js', model_name: "vehicle", table_name: 'vehicles', provider_id:  current_provider.try(:id) %>
+
+<%= render 'shared/modal_dialog', modal_id: "vehicle-form-modal-dialog" %>
+
+<%= javascript_tag do %>
+  $(document).ready(function(){
+    // TODO
+  });
+<% end %>
