--- a/app/views/reporting/reports/show.html.haml
+++ b/app/views/reporting/reports/show.html.haml
@@ -1,3 +1,4 @@
+= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports'
 = render partial: 'header'
 
 = render partial: 'list', locals: {reports: @reports, report_id: @report.id, is_generic_report: true}
