--- a/app/views/reporting/results/index.html.haml
+++ b/app/views/reporting/results/index.html.haml
@@ -1,3 +1,4 @@
+= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports'
 = render partial: 'header'
 .panel.panel-default{style: 'padding: 0px;'}
   .panel-heading
