--- a/app/views/reports/customer_receiving_trips_in_range.html.erb
+++ b/app/views/reports/customer_receiving_trips_in_range.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
 <%= content_for :title, (translate_helper("crtr_report_title") + "#{@query.try(:start_date).try(:strftime, ": %B %Y")}#{@query.try(:start_date).try(:strftime, " - %B %Y")}") %>
 <div id="page-header" class="clearfix">
 <h1><%= translate_helper("crtr_verify_runs")%><%= @query.try(:start_date).try(:strftime, ": %B %Y") %><%= @query.try(:start_date).try(:strftime, " - %B %Y") %></h1>
