--- a/app/views/reports/donations.html.erb
+++ b/app/views/reports/donations.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
+<%= render 'custom_report_header'%>
 <div id="page-header" class="clearfix">
   <h1><%= translate_helper("donation_report_heading") %></h1>
 </div>
