--- a/app/views/reports/service_summary.html.erb
+++ b/app/views/reports/service_summary.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
+<%= render 'custom_report_header'%>
 <%= content_for :title, translate_helper("service_summary_title",provider:@provider.name,start_date:@start_date.strftime("%B %Y")) %>
 <div id="page-header" class="clearfix">
   <h1><%= translate_helper("service_summary_heading") %></h1>
