--- a/app/views/reports/show_trips_for_verification.html.erb
+++ b/app/views/reports/show_trips_for_verification.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
 <%= content_for :title, "#{translate_helper("show_trips_title")}#{@query.try(:start_date).try(:strftime, ": %B %Y")}" %>
 <div id="page-header" class="clearfix">
 <h1><%= translate_helper("show_trips_report_heading") +  @query.try(:start_date).try(:strftime, ": %B %Y") %></h1>
