--- a/app/views/reports/vehicles_monthly.html.erb
+++ b/app/views/reports/vehicles_monthly.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
+<%= render 'custom_report_header'%>
 <%= content_for :title, translate_helper("vehicle_operations_title",provider:@provider.name,start_date:@start_date.strftime("%B %Y")) %>
 
 <div id="page-header" class="clearfix">
