--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -14,24 +14,25 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-12 col-md-6">
+  <div class="col-sm-12">
     <table class="table table-striped table-bordered" id="vehicles-table">
       <thead>
         <tr>
-          <th class="col-sm-4"><%= translate_helper("name") %></th>
-          <th class="col-sm-4"><%= translate_helper("vehicle_year") %></th>
-          <th class="col-sm-4"><%= translate_helper("vehicle_make") %></th>
-          <th class="col-sm-4"><%= translate_helper("vehicle_model") %></th>
-          <th class="col-sm-4"><%= translate_helper("license_plate") %></th>
-          <th class="col-sm-4"><%= translate_helper("vin") %></th>
-          <th class="col-sm-4"><%= translate_helper("vehicle_location") %></th>
-          <th class="col-sm-4"><%= translate_helper("default_driver") %></th>
+          <th class="col-sm-2"><%= translate_helper("name") %></th>
+          <th><%= translate_helper("vehicle_year") %></th>
+          <th><%= translate_helper("vehicle_make") %></th>
+          <th><%= translate_helper("vehicle_model") %></th>
+          <th><%= translate_helper("license_plate") %></th>
+          <th class="col-sm-2"><%= translate_helper("vin") %></th>
+          <th class="col-sm-2"><%= translate_helper("vehicle_location") %></th>
+          <th class="col-sm-2"><%= translate_helper("default_driver") %></th>
+          <th><%= translate_helper("vehicle_form_active_label") %></th>
         </tr>
       </thead>
       <tbody>
         <% if @vehicles.empty? %>
           <tr>
-            <td colspan="8"><%= translate_helper("no_vehicles") %></td>
+            <td colspan="9"><%= translate_helper("no_vehicles") %></td>
           </tr>
         <% end %>
         <%= render partial: 'vehicle', collection: @vehicles %>
