Adding new fields to vehicles table [#98939250]

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-6">
       <div class="panel panel-primary">
-        <div class="panel-heading">Details</div>
+        <div class="panel-heading"><%= translate_helper("driver_form_details_heading") %></div>
         <div class="panel-body form-horizontal">
           <div class="form-group">
             <%= f.label :name, translate_helper("driver_form_name"), class: "col-md-2 control-label" %>
